Fixed the text alignment on the hero section.

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -37,9 +37,9 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
 
   gap: 0.5em;
-  text-align: center;
 }
 
 .hero-text-container .hero-title-prefix {
@@ -49,7 +49,10 @@
 .hero-text-container .hero-title {
   text-transform: uppercase;
   margin: 0;
+}
 
+.hero-title > span {
+  display: block;
 }
 
 .hero-title .title-spread {
